@@ -45,6 +45,7 @@ public interface Configuration {
   public final static String SNIPSNAP_CONFIG_BOOK = "SnipSnap/config/bookservices";
   public final static String SNIPSNAP_CONFIG_ROBOTS = "SnipSnap/config/robots";
   public final static String SNIPSNAP_CONFIG_ROBOTS_TXT = "SnipSnap/config/robots.txt";
+  public final static String SNIPSNAP_THEMES = "SnipSnap/themes";
 
   public String get(String name);
   public void set(String name, String value);
