@@ -1,5 +1,6 @@
 0.5
 
+- Added Feature: Stylesheets are now contained within the SnipSpace
 - Developer: Macro, Servlet and ContentRenderer for rendering inline content (PNG, ...)
 - Added Feature: Rendering MindMaps and Organigrams
 - New Installer (first time run installs a basic SnipSnap applicaton)
